--- a/login.html
+++ b/login.html
@@ -3,11 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Login</title>
+	<title>EASTWEST Shuttle</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="login-container">
+		<div class="logo-section">
+			<img src="logo.webp" alt="Logo" class="logo-placeholder" />
+			<div class="company-name">Your Company</div>
+		</div>
 		<h2>Login</h2>
 		<form action="#" method="post">
 			<label for="username">Username</label>
@@ -17,23 +21,17 @@
 			<input type="password" id="password" name="password" required>
 			<button type="submit">Login</button>
 		</form>
-		<div style="margin: 1.5rem 0 1rem 0; text-align: center;">
-			<span style="color: #888;">or login with</span>
+		<div class="social-divider">
+			<span class="social-divider-text">or login with</span>
 		</div>
-		<div style="display: flex; flex-direction: column; gap: 0.5rem; margin-bottom: 1.5rem;">
-			<button type="button" style="background: #3b5998; color: #fff; border: none; border-radius: 4px; padding: 0.7rem; font-size: 1rem; cursor: pointer;">
-				Login with Facebook
-			</button>
-			<button type="button" style="background: #db4437; color: #fff; border: none; border-radius: 4px; padding: 0.7rem; font-size: 1rem; cursor: pointer;">
-				Login with Google
-			</button>
-			<button type="button" style="background: #333; color: #fff; border: none; border-radius: 4px; padding: 0.7rem; font-size: 1rem; cursor: pointer;">
-				Login with GitHub
-			</button>
+		<div class="social-buttons">
+			<button type="button" class="social-btn facebook">Login with Facebook</button>
+			<button type="button" class="social-btn google">Login with Google</button>
+			<button type="button" class="social-btn github">Login with GitHub</button>
 		</div>
-		<div style="display: flex; justify-content: space-between; font-size: 0.95rem;">
-			<a href="#" style="color: #007bff; text-decoration: none;">Forgot password?</a>
-			<a href="#" style="color: #007bff; text-decoration: none;">Register</a>
+		<div class="register-links">
+			<a href="#" class="register-link">Forgot password?</a>
+			<a href="register.html" class="register-link">Register</a>
 		</div>
 	</div>
 </body>
