Change logo and company name in login.html
Updated logo source and company name in login page.

--- a/login.html
+++ b/login.html
@@ -5,12 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>EASTWEST Shuttle</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="styles/logo.webp" type="image/webp">
 </head>
 <body>
 	<div class="login-container">
 		<div class="logo-section">
-			<img src="logo.webp" alt="Logo" class="logo-placeholder" />
-			<div class="company-name">Your Company</div>
+			<img src="styles/logo.webp" alt="Logo" class="logo-placeholder" />
+			<div class="company-name">EASTWEST BPO</div>
 		</div>
 		<h2>Login</h2>
 		<form action="#" method="post">
