Fix logo path and add favicon to register.html
Updated logo path and added favicon link.

--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>EASTWEST Shuttle</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="styles/logo.webp" type="image/webp">
 	<script>
 	function validateForm(e) {
 		e.preventDefault();
@@ -49,7 +50,7 @@
 <body>
 	<div class="login-container">
 		<div class="logo-section">
-			<img src="logo.webp" alt="Logo" class="logo-placeholder" />
+			<img src="styles/logo.webp" alt="Logo" class="logo-placeholder" />
 			<div class="company-name">Your Company</div>
 		</div>
 		<h2>Register</h2>
