--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>EASTWEST Shuttle</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles/style.css">
 	<link rel="icon" href="styles/logo.webp" type="image/webp">
 	<script>
 	function validateForm(e) {
@@ -82,3 +82,4 @@
 	</div>
 </body>
 </html>
+
