--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <div class="logo">ShuttleSys</div>
+        <div class="logo">EastWest Shuttle</div>
 
         <ul class="menu">
             <!-- Dashboard Link -->
