--- a/daily_records.html
+++ b/daily_records.html
@@ -5,59 +5,6 @@
     <title>Daily Records</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-
-    <style>
-        .top-controls {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 15px;
-            gap: 10px;
-        }
-
-        .filter-bar {
-            display: flex;
-            align-items: flex-end;
-            gap: 10px;
-        }
-
-        .filter-group {
-            display: flex;
-            flex-direction: column;
-            font-size: 14px;
-        }
-
-        .filter-group input {
-            padding: 8px 10px;
-            border-radius: 6px;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            background: #fff;
-        }
-
-        .primary-btn {
-            padding: 8px 16px;
-            background: #007bff;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        .secondary-btn {
-            padding: 8px 16px;
-            background: #6c757d;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        .primary-btn:hover { background: #0056b3; }
-        .secondary-btn:hover { background: #5a6268; }
-    </style>
 </head>
 
 <body class="dashboard">
@@ -90,7 +37,7 @@
 
     <!-- TOPBAR -->
     <header class="topbar">
-        <div class="user-dropdown" style="margin-left:auto;">
+        <div class="user-dropdown">
             <button class="user-btn" onclick="toggleUserMenu()">John Doe ▾</button>
             <ul class="user-menu" id="userMenu">
                 <li><a href="#">Edit Account</a></li>
@@ -108,24 +55,20 @@
             <div class="filter-bar">
                 <div class="filter-group">
                     <label>From</label>
-                    <input type="text" id="fromDate" readonly placeholder="January 14 2024" onclick="openPicker('from')">
+                    <input type="date" id="fromDate">
                 </div>
 
                 <div class="filter-group">
                     <label>To</label>
-                    <input type="text" id="toDate" readonly placeholder="February 2 2024" onclick="openPicker('to')">
+                    <input type="date" id="toDate">
                 </div>
 
-                <button class="primary-btn" onclick="filterRecords()">Filter</button>
-                <button class="secondary-btn" onclick="clearFilter()">Clear</button>
+                <button class="primary-btn filter-btn" onclick="filterRecords()">Filter</button>
+                <button class="secondary-btn clear-btn" onclick="clearFilter()">Clear</button>
             </div>
 
-            <button class="primary-btn" onclick="exportExcel()">Export to Excel</button>
+            <button class="primary-btn export-btn" onclick="exportExcel()">Export</button>
         </div>
-
-        <!-- HIDDEN DATE INPUTS -->
-        <input type="date" id="fromRaw" hidden>
-        <input type="date" id="toRaw" hidden>
 
         <!-- TABLE -->
         <section class="chart-box">
@@ -140,20 +83,77 @@
                         <th>Employee ID</th>
                     </tr>
                 </thead>
+
                 <tbody id="recordsBody">
 
-                    <tr data-date="2024-01-14">
-                        <td>January 14 2024</td>
-                        <td>08:30 AM</td>
+                    <tr data-date="2024-01-05">
+                        <td>January 5 2024</td>
+                        <td>07:45 AM</td>
                         <td>Shuttle 1</td>
                         <td>EMP001</td>
                     </tr>
 
+                    <tr data-date="2024-01-14">
+                        <td>January 14 2024</td>
+                        <td>08:30 AM</td>
+                        <td>Shuttle 2</td>
+                        <td>EMP002</td>
+                    </tr>
+
+                    <tr data-date="2024-01-25">
+                        <td>January 25 2024</td>
+                        <td>09:15 AM</td>
+                        <td>Shuttle 3</td>
+                        <td>EMP003</td>
+                    </tr>
+
                     <tr data-date="2024-02-02">
                         <td>February 2 2024</td>
-                        <td>09:10 AM</td>
+                        <td>07:50 AM</td>
+                        <td>Shuttle 1</td>
+                        <td>EMP004</td>
+                    </tr>
+
+                    <tr data-date="2024-02-10">
+                        <td>February 10 2024</td>
+                        <td>08:40 AM</td>
                         <td>Shuttle 2</td>
-                        <td>EMP014</td>
+                        <td>EMP005</td>
+                    </tr>
+
+                    <tr data-date="2024-02-18">
+                        <td>February 18 2024</td>
+                        <td>09:05 AM</td>
+                        <td>Shuttle 3</td>
+                        <td>EMP006</td>
+                    </tr>
+
+                    <tr data-date="2024-03-01">
+                        <td>March 1 2024</td>
+                        <td>07:30 AM</td>
+                        <td>Shuttle 1</td>
+                        <td>EMP007</td>
+                    </tr>
+
+                    <tr data-date="2024-03-09">
+                        <td>March 9 2024</td>
+                        <td>08:10 AM</td>
+                        <td>Shuttle 2</td>
+                        <td>EMP008</td>
+                    </tr>
+
+                    <tr data-date="2024-03-15">
+                        <td>March 15 2024</td>
+                        <td>08:55 AM</td>
+                        <td>Shuttle 3</td>
+                        <td>EMP009</td>
+                    </tr>
+
+                    <tr data-date="2024-03-25">
+                        <td>March 25 2024</td>
+                        <td>09:20 AM</td>
+                        <td>Shuttle 1</td>
+                        <td>EMP010</td>
                     </tr>
 
                 </tbody>
@@ -182,38 +182,28 @@ window.addEventListener("click", e => {
     }
 });
 
-function openPicker(type) {
-    document.getElementById(type + "Raw").click();
-}
-
-function formatDate(date) {
-    return new Date(date).toLocaleDateString("en-US", {
-        month: "long",
-        day: "numeric",
-        year: "numeric"
-    }).replace(",", "");
-}
-
-fromRaw.onchange = () => fromDate.value = formatDate(fromRaw.value);
-toRaw.onchange = () => toDate.value = formatDate(toRaw.value);
-
 function filterRecords() {
-    const from = fromRaw.value;
-    const to = toRaw.value;
+    const from = document.getElementById("fromDate").value;
+    const to = document.getElementById("toDate").value;
 
     document.querySelectorAll("#recordsBody tr").forEach(row => {
         const d = row.dataset.date;
-        row.style.display =
-            (!from || d >= from) && (!to || d <= to)
-                ? ""
-                : "none";
+        let show = true;
+
+        if (from && d < from) show = false;
+        if (to && d > to) show = false;
+
+        row.style.display = show ? "" : "none";
     });
 }
 
 function clearFilter() {
-    fromRaw.value = toRaw.value = "";
-    fromDate.value = toDate.value = "";
-    document.querySelectorAll("#recordsBody tr").forEach(r => r.style.display = "");
+    document.getElementById("fromDate").value = "";
+    document.getElementById("toDate").value = "";
+
+    document.querySelectorAll("#recordsBody tr").forEach(row => {
+        row.style.display = "";
+    });
 }
 
 function exportExcel() {
