--- a/daily_records.html
+++ b/daily_records.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Daily Records</title>
+    <title>EASTWEST Shuttle</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+    <link rel="icon" href="styles/logo.webp" type="image/webp">
 </head>
 
 <body class="dashboard">
@@ -50,25 +51,25 @@
     <main class="content">
 
         <!-- FILTER + EXPORT -->
-        <div class="top-controls">
+<div class="top-controls">
 
-            <div class="filter-bar">
-                <div class="filter-group">
-                    <label>From</label>
-                    <input type="date" id="fromDate">
-                </div>
-
-                <div class="filter-group">
-                    <label>To</label>
-                    <input type="date" id="toDate">
-                </div>
-
-                <button class="primary-btn filter-btn" onclick="filterRecords()">Filter</button>
-                <button class="secondary-btn clear-btn" onclick="clearFilter()">Clear</button>
-            </div>
-
-            <button class="primary-btn export-btn" onclick="exportExcel()">Export</button>
+    <div class="filter-bar">
+        <div class="filter-group">
+            <label>From</label>
+            <input type="date" id="fromDate">
         </div>
+
+        <div class="filter-group">
+            <label>To</label>
+            <input type="date" id="toDate">
+        </div>
+
+        <button class="filter-btn" onclick="clearFilter()">Filter</button>
+        <button class="secondary-btn clear-btn" onclick="clearFilter()">Clear</button>
+    </div>
+
+    <button class="primary-btn export-btn" onclick="exportExcel()">Export</button>
+</div>
 
         <!-- TABLE -->
         <section class="chart-box">
