--- a/dashboard.html
+++ b/dashboard.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Employee Shuttle Dashboard</title>
+    <title>EASTWEST Shuttle</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="styles/logo.webp" type="image/webp">
 </head>
 
 <body class="dashboard">
