--- a/Account.html
+++ b/Account.html
@@ -11,7 +11,7 @@
 
 <!-- SIDEBAR -->
 <aside class="sidebar">
-    <div class="logo">EastWest Shuttle</div>
+    <div class="logo">EW Shuttle System</div>
 
     <ul class="menu">
         <li>
@@ -19,7 +19,7 @@
         </li>
 
         <li class="active">
-            <a href="accounts.html">Accounts</a>
+            <a href="Account.html">Accounts</a>
         </li>
 
         <li>
@@ -62,7 +62,7 @@
         </div>
 
         <!-- ACCOUNTS TABLE -->
-        <section class="chart-box">
+        <section class="chart-box2">
             <h4>All Accounts</h4>
 
             <table id="accountsTable">
@@ -81,7 +81,7 @@
 </div>
 
 <!-- ADD ACCOUNT MODAL -->
-<div class="modal" id="addAccountModal">
+<div class="add-account-modal" id="addAccountModal">
     <div class="auth-card">
         <h1>Add Account</h1>
 
@@ -114,6 +114,9 @@
         <button class="secondary-btn" onclick="closeAddModal()">Cancel</button>
     </div>
 </div>
+
+
+
 <!-- JS -->
 <script>
 let accounts = [];
