--- a/daily_records.html
+++ b/daily_records.html
@@ -12,7 +12,7 @@
 
 <!-- SIDEBAR -->
 <aside class="sidebar">
-    <div class="logo">EastWest Shuttle</div>
+    <div class="logo">EW Shuttle System</div>
 
     <ul class="menu">
         <li><a href="dashboard.html"><strong>Dashboard</strong></a></li>
@@ -72,7 +72,7 @@
 </div>
 
         <!-- TABLE -->
-        <section class="chart-box">
+        <section class="chart-box3">
             <h4>All Records — All Shuttles</h4>
 
             <table id="dailyRecordsTable">
