--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,7 @@
+<!---FEB 2, 2026-->
+<!--JOHN CHRISTIAN G. CAYANAN-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +15,7 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <div class="logo">EastWest Shuttle</div>
+        <div class="logo">EW Shuttle System</div>
 
         <ul class="menu">
             <!-- Dashboard Link -->
