--- a/dashboard.html
+++ b/dashboard.html
@@ -44,7 +44,7 @@
                     <li><a href="shuttle.html?id=3">Shuttle 3</a></li>
                 </ul>
             </li>
-
+            
             <!-- Records -->
             <li>
                 <a href="daily_records.html" style="text-decoration:none; color:inherit;">
@@ -73,6 +73,7 @@
 
         <!-- Content -->
         <main class="content">
+            
 
             <!-- Passenger Count Cards -->
             <section class="cards">
@@ -91,6 +92,23 @@
                     <h2 id="bus3Count">0</h2>
                 </div>
             </section>
+            <section class="cards2">
+    <div class="card">
+        <h4>Shuttle 1 Status</h4>
+        <h2 class="status-active">Active</h2>
+    </div>
+
+    <div class="card">
+        <h4>Shuttle 2 Status</h4>
+        <h2 class="status-offline">Offline</h2>
+    </div>
+
+    <div class="card">
+        <h4>Shuttle 3 Status</h4>
+        <h2 class="status-active">Active</h2>
+    </div>
+</section>
+
 
             <!-- Today's Passenger Records -->
             <section class="chart-box" id="todayRecordsSection">
