--- a/dashboard.html
+++ b/dashboard.html
@@ -114,7 +114,7 @@
             <section class="chart-box" id="todayRecordsSection">
                 <h4>Today's Records — All Shuttles</h4>
 
-                <table>
+                <table class="lamesa">
                     <thead>
                         <tr>
                             <th>Date</th>
