--- a/login.html
+++ b/login.html
@@ -7,34 +7,33 @@
 	<link rel="stylesheet" href="styles/style.css">
 	<link rel="icon" href="styles/logo.webp" type="image/webp">
 </head>
+
 <body>
 	<div class="login-container">
+
 		<div class="logo-section">
 			<img src="styles/logo.webp" alt="Logo" class="logo-placeholder" />
 			<div class="company-name">EASTWEST BPO</div>
 		</div>
-		<h2>Login</h2>
-		<form action="#" method="post">
-			<label for="username">Username</label>
-			<input type="text" id="username" name="username" required>
 
-			<label for="password">Password</label>
-			<input type="password" id="password" name="password" required>
-			<button type="submit">Login</button>
-		</form>
-		<div class="social-divider">
-			<span class="social-divider-text">or login with</span>
+		<h2>Login</h2>
+
+		<form action="#" method="post">
+	<label for="username">Username</label>
+	<input type="text" id="username" name="username" required>
+
+	<label for="password">Password</label>
+	<input type="password" id="password" name="password" required>
+
+	<button type="submit" class="login-btn">
+		<div class="user-profile">
+			<div class="user-profile-inner">
+				LOGIN
+			</div>
 		</div>
-		<div class="social-buttons">
-			<button type="button" class="social-btn facebook">Login with Facebook</button>
-			<button type="button" class="social-btn google">Login with Google</button>
-			<button type="button" class="social-btn github">Login with GitHub</button>
-		</div>
-		<div class="register-links">
-			<a href="#" class="register-link">Forgot password?</a>
-			<a href="register.html" class="register-link">Register</a>
-		</div>
+	</button>
+</form>
+
 	</div>
 </body>
 </html>
-
