--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
 		<div class="logo-section">
 			<img src="styles/logo.webp" alt="Logo" class="logo-placeholder" />
-			<div class="company-name">EASTWEST BPO</div>
+			<div class="company-name">EASTWEST SHUTTLE SYSTEM</div>
 		</div>
 
 		<h2>Login</h2>
